<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_secondary"
    android:orientation="vertical">

    <LinearLayout style="@style/header_layout">

        <TextView
            style="@style/header_text"
            android:text="@string/app_name"
            android:textColor="@color/YP_White"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_regular">

        <Button
            android:id="@+id/search_button"
            style="@style/main_button"
            android:text="@string/search_text"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/media_button"
            style="@style/main_button"
            android:text="@string/media_text"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/settings_button"
            style="@style/main_button"
            android:text="@string/setting_text"
            app:icon="@drawable/settings" />
    </LinearLayout>
</LinearLayout>