<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/track_layout">

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:src="@drawable/placeholder"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_smaller"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trackName"
                style="@style/track_name"
                android:text="@string/trackname" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/artistName"
                    style="@style/artist_name"
                    android:text="@string/artistname" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/dot"
                    app:tint="?attr/text_color_secondary" />

                <TextView
                    android:id="@+id/trackTime"
                    style="@style/artist_name"
                    android:text="@string/tracktime" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            style="@style/setting_option_button"
            android:layout_marginStart="@dimen/padding_smaller"
            android:src="@drawable/arrow_forward">

        </ImageView>

    </LinearLayout>
</LinearLayout>
