<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/horizontal_primary_padding"
            android:text="@string/setting_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/horizontal_primary_padding"
            android:paddingEnd="@dimen/horizontal_secondary_padding"
            android:paddingVertical="@dimen/vertical_primary_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/darktheme_text"
                android:textColor="@color/black"
                android:textSize="@dimen/secondary_text_size" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_secondary_padding"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/horizontal_primary_padding"
            android:paddingEnd="@dimen/horizontal_secondary_padding"
            android:paddingVertical="@dimen/vertical_primary_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_text"
                android:textColor="@color/black"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/share"
                android:layout_marginLeft="@dimen/horizontal_secondary_padding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/horizontal_primary_padding"
            android:paddingEnd="@dimen/horizontal_secondary_padding"
            android:paddingVertical="@dimen/vertical_primary_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/support_text"
                android:textColor="@color/black"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/support"
                android:layout_marginLeft="@dimen/horizontal_secondary_padding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/horizontal_primary_padding"
            android:paddingEnd="@dimen/horizontal_secondary_padding"
            android:paddingVertical="@dimen/vertical_primary_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terms_text"
                android:textColor="@color/black"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_forward"
                android:layout_marginLeft="@dimen/horizontal_secondary_padding"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>