<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.media.fragment.MediaNewPlaylistFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/arrow_back_regular_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/text_color_primary" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/playlist_add"
        android:textColor="?attr/text_color_primary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/playlist_cover_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/playlist_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_title_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/playlist_title_input_layout"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@drawable/box_stroke_selector"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/YP_Blue"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title_et"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintTop_toBottomOf="@+id/playlist_cover_image" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_desc_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/playlist_desc_input_layout"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@drawable/box_stroke_selector"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/YP_Blue"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_il">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_desc_et"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintTop_toBottomOf="@+id/playlist_title_il" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ys_display_medium"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        tools:backgroundTint="@color/YP_Text_Gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_19" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>